log/build_2022-09-03_19-49-53/pkg_laser/stderr.log
  File "/home/brunofarias/turtlebot3_ws/install/pkg_laser/lib/python3.8/site-packages/pkg_laser/movement.py", line 121
    else if((laser.noroeste + laser.oeste) > (laser.nordeste + laser.leste)):
         ^
SyntaxError: invalid syntax

